[tool.poetry]
name = "hcert"
version = "0.2.0"
description = "Electronic Health Certificate (HCERT)"
authors = ["Jakob Schlyter <jakob@kirei.se>"]

[tool.poetry.dependencies]
python = "^3.9"
jsonschema = "^3.2.0"
cose = "0.9.dev3"
cbor2 = "^5.2.0"
cryptojwt = "^1.4.0"
base45 = "^0.2.0"
PyYAML = "^5.4.1"
Pillow = "^8.1.1"
qrcode = "^6.1"

[tool.poetry.dev-dependencies]
pylama = "^7.7.1"
black = "^20.8b1"
isort = "^5.7.0"
pytest = "^6.2.2"
pytest-isort = "^1.3.0"
pytest-black = "^0.3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
hcert = "hcert.cli:main"
